<resources>
    <string name="app_name">Skyrim Calculator</string>

    <!-- Button Constants -->
    <string name="skillsbtn">Skills Button</string>
    <string name="skillstag">Skills</string>
    <string name="alchemybtn">Alchemy Button</string>
    <string name="alchemytag">Alchemy</string>
    <string name="smithingbtn">Smithing Button</string>
    <string name="smithingtag">Smithing</string>
    <dimen name="buttonDimens">128dp</dimen>

    <!-- SkillsActivity -->
    <string name="skillheader">Skills</string>
    <string name="leftheadimg">Left Header Image</string>
    <string name="rightheadimg">Right Header Image</string>
    <string name="skill_alchemy">Alchemy Skill: </string>
    <string name="skill_alchemyperk">  Alchemy Perk: </string>
    <string name="skill_physicianperk">  Physician Perk: </string>
    <string name="skill_benefactorperk">  Benefactor Perk: </string>
    <string name="skill_poisonerperk">  Poisoner Perk: </string>
    <string name="skill_purityperk">  Purity Perk: </string>
    <string name="skill_smithing">Smithing Skill: </string>
    <string name="skill_steelsmith">Steel Smith: </string>
    <string name="skill_elvensmith">Elven Smith: </string>
    <string name="skill_dwarvensmith">Dwarven Smith:</string>
    <string name="skill_advancedsmith">Advanced Smith:</string>
    <string name="skill_arcanesmith">Arcane Smith:</string>
    <string name="skill_glasssmith">Glass Smith:</string>
    <string name="skill_orcishsmith">Orcish Smith:</string>
    <string name="skill_dragonsmith">Dragon Smith:</string>
    <string name="skill_daedricsmith">Daedric Smith:</string>
    <string name="skill_ebonysmith">Ebony Smith:</string>

</resources>