<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".SkillsActivity">

    <!-- Header -->
    <TextView
        android:id="@+id/skillsHeader"
        android:layout_width="383dp"
        android:layout_height="65dp"
        android:background="@drawable/banner"
        android:fontFamily="@font/skyrimbooks_handwritten_bold"
        android:gravity="center"
        android:shadowColor="@color/material_dynamic_tertiary50"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:text="@string/skillstag"
        android:textColor="@color/material_dynamic_primary30"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck"
        tools:text="@string/skillstag" />

    <!-- Alchemy Section -->
    <TextView
        android:id="@+id/txtAlchemySkill"
        style="@android:style/Widget.Holo.TextView"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/skill_alchemy"
        android:fontFamily="@font/skyrimbooks_handwritten_bold"
        android:shadowColor="@color/material_dynamic_tertiary50"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="5"
        android:text="@string/skill_alchemy"
        android:textAlignment="center"
        android:textColor="@color/material_dynamic_primary50"
        android:textColorHighlight="@color/purple_200"
        android:textIsSelectable="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skillsHeader"
        tools:ignore="TextSizeCheck"
        tools:text="@string/skill_alchemy" />

    <TextView
        android:id="@+id/txtAlchemyPerk"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/skill_alchemyperk"
        android:fontFamily="@font/skyrimbooks_handwritten_bold"
        android:shadowColor="@color/material_dynamic_tertiary50"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="5"
        android:text="@string/skill_alchemyperk"
        android:textAlignment="textEnd"
        android:textColor="@color/material_dynamic_primary50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAlchemySkill"
        tools:ignore="TextSizeCheck"
        tools:text="@string/skill_alchemyperk" />

    <TextView
        android:id="@+id/txtPhysicianPerk"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/skill_physicianperk"
        android:fontFamily="@font/skyrimbooks_handwritten_bold"
        android:shadowColor="@color/material_dynamic_tertiary50"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/skill_physicianperk"
        android:textAlignment="textEnd"
        android:textColor="@color/material_dynamic_primary50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAlchemyPerk"
        tools:text="@string/skill_physicianperk" />

    <TextView
        android:id="@+id/txtBenefactorPerk"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/skill_benefactorperk"
        android:fontFamily="@font/skyrimbooks_handwritten_bold"
        android:shadowColor="@color/material_dynamic_tertiary50"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/skill_benefactorperk"
        android:textAlignment="textEnd"
        android:textColor="@color/material_dynamic_primary50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPhysicianPerk"
        tools:text="@string/skill_benefactorperk" />

    <TextView
        android:id="@+id/txtPoisonerPerk"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/skill_poisonerperk"
        android:fontFamily="@font/skyrimbooks_handwritten_bold"
        android:shadowColor="@color/material_dynamic_tertiary50"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/skill_poisonerperk"
        android:textAlignment="textEnd"
        android:textColor="@color/material_dynamic_primary50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBenefactorPerk"
        tools:text="@string/skill_poisonerperk" />

    <TextView
        android:id="@+id/txtPurityPerk"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/skill_purityperk"
        android:fontFamily="@font/skyrimbooks_handwritten_bold"
        android:shadowColor="@color/material_dynamic_tertiary50"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/skill_purityperk"
        android:textAlignment="textEnd"
        android:textColor="@color/material_dynamic_primary50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPoisonerPerk"
        tools:text="@string/skill_purityperk" />

    <TextView
        android:id="@+id/txtSmithing"
        style="@android:style/Widget.Holo.TextView"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/skill_smithing"
        android:fontFamily="@font/skyrimbooks_handwritten_bold"
        android:shadowColor="@color/material_dynamic_tertiary50"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="5"
        android:text="@string/skill_smithing"
        android:textAlignment="center"
        android:textColor="@color/material_dynamic_primary50"
        android:textColorHighlight="@color/purple_200"
        android:textIsSelectable="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPurityPerk"
        tools:ignore="TextSizeCheck"
        tools:text="@string/skill_smithing" />

    <TextView
        android:id="@+id/txtSteelSmith"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/skill_steelsmith"
        android:fontFamily="@font/skyrimbooks_handwritten_bold"
        android:shadowColor="@color/material_dynamic_tertiary50"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="5"
        android:text="@string/skill_steelsmith"
        android:textAlignment="textEnd"
        android:textColor="@color/material_dynamic_primary50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSmithing"
        tools:ignore="TextSizeCheck"
        tools:text="@string/skill_steelsmith" />

    <TextView
        android:id="@+id/txtElvenSmith"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/skill_elvensmith"
        android:fontFamily="@font/skyrimbooks_handwritten_bold"
        android:shadowColor="@color/material_dynamic_tertiary50"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/skill_elvensmith"
        android:textAlignment="textEnd"
        android:textColor="@color/material_dynamic_primary50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSteelSmith"
        tools:text="@string/skill_elvensmith" />

    <TextView
        android:id="@+id/txtAdvancedSmith"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/skill_advancedsmith"
        android:fontFamily="@font/skyrimbooks_handwritten_bold"
        android:shadowColor="@color/material_dynamic_tertiary50"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/skill_advancedsmith"
        android:textAlignment="textEnd"
        android:textColor="@color/material_dynamic_primary50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtElvenSmith"
        tools:text="@string/skill_advancedsmith" />

    <TextView
        android:id="@+id/txtGlassSmith"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/skill_glasssmith"
        android:fontFamily="@font/skyrimbooks_handwritten_bold"
        android:shadowColor="@color/material_dynamic_tertiary50"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/skill_glasssmith"
        android:textAlignment="textEnd"
        android:textColor="@color/material_dynamic_primary50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAdvancedSmith"
        tools:text="@string/skill_glasssmith" />

    <TextView
        android:id="@+id/txtDragonSmith"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/skill_dragonsmith"
        android:fontFamily="@font/skyrimbooks_handwritten_bold"
        android:shadowColor="@color/material_dynamic_tertiary50"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/skill_dragonsmith"
        android:textAlignment="textEnd"
        android:textColor="@color/material_dynamic_primary50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtGlassSmith"
        tools:text="@string/skill_dragonsmith" />

    <TextView
        android:id="@+id/txtDaedricSmith"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/skill_dragonsmith"
        android:fontFamily="@font/skyrimbooks_handwritten_bold"
        android:shadowColor="@color/material_dynamic_tertiary50"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/skill_daedricsmith"
        android:textAlignment="textEnd"
        android:textColor="@color/material_dynamic_primary50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDragonSmith"
        tools:text="@string/skill_daedricsmith" />

    <TextView
        android:id="@+id/txtArcaneSmith"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/skill_arcanesmith"
        android:fontFamily="@font/skyrimbooks_handwritten_bold"
        android:shadowColor="@color/material_dynamic_tertiary50"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/skill_arcanesmith"
        android:textAlignment="textEnd"
        android:textColor="@color/material_dynamic_primary50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDaedricSmith"
        tools:text="@string/skill_arcanesmith" />

    <TextView
        android:id="@+id/txtDwarvenSmith"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/skill_dwarvensmith"
        android:fontFamily="@font/skyrimbooks_handwritten_bold"
        android:shadowColor="@color/material_dynamic_tertiary50"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/skill_dwarvensmith"
        android:textAlignment="textEnd"
        android:textColor="@color/material_dynamic_primary50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtArcaneSmith"
        tools:text="@string/skill_dwarvensmith" />

    <TextView
        android:id="@+id/txtOrcishSmith"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/skill_orcishsmith"
        android:fontFamily="@font/skyrimbooks_handwritten_bold"
        android:shadowColor="@color/material_dynamic_tertiary50"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/skill_orcishsmith"
        android:textAlignment="textEnd"
        android:textColor="@color/material_dynamic_primary50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDwarvenSmith"
        tools:text="@string/skill_orcishsmith" />

    <TextView
        android:id="@+id/txtEbonySmith"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/skill_ebonysmith"
        android:fontFamily="@font/skyrimbooks_handwritten_bold"
        android:shadowColor="@color/material_dynamic_tertiary50"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/skill_ebonysmith"
        android:textAlignment="textEnd"
        android:textColor="@color/material_dynamic_primary50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOrcishSmith"
        tools:text="@string/skill_ebonysmith" />

</androidx.constraintlayout.widget.ConstraintLayout>