<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TopOfSection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/Skrim_Splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/skyrim_wallpaper_385"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/BottomOfSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="714dp"
        android:background="#E91E63"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="705dp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="709dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="575dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="578dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/RightSide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="385dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="386dp"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSmithing"
        android:layout_width="@dimen/buttonDimens"
        android:layout_height="@dimen/buttonDimens"
        android:layout_marginHorizontal="0dp"
        android:layout_marginVertical="0dp"
        android:background="@drawable/smithing_128"
        android:contentDescription="@string/smithingbtn"
        android:drawablePadding="0dp"
        android:enabled="true"
        android:foreground="@drawable/smithing_128"
        android:onClick="onClick"
        android:padding="0dp"
        android:paddingStart="0dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:saveEnabled="false"
        android:tag="@string/smithingtag"
        app:icon="@drawable/smithing_128"
        app:iconPadding="0dp"
        app:layout_constraintStart_toEndOf="@+id/btnAlchemy"
        app:layout_constraintTop_toBottomOf="@+id/Skrim_Splash"
        tools:ignore="RedundantDescriptionCheck" />

    <Button
        android:id="@+id/btnAlchemy"
        android:layout_width="@dimen/buttonDimens"
        android:layout_height="@dimen/buttonDimens"
        android:layout_margin="0dp"
        android:layout_marginHorizontal="0dp"
        android:layout_marginVertical="0dp"
        android:background="@drawable/alchemy_128"
        android:contentDescription="@string/alchemybtn"
        android:drawablePadding="0dp"
        android:enabled="false"
        android:foreground="@drawable/alchemy_128"
        android:onClick="onClick"
        android:padding="0dp"
        android:paddingStart="0dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:saveEnabled="false"
        android:tag="@string/alchemytag"
        app:icon="@drawable/alchemy_128"
        app:iconPadding="0dp"
        app:layout_constraintTop_toBottomOf="@+id/Skrim_Splash"
        tools:ignore="RedundantDescriptionCheck"
        tools:layout_editor_absoluteX="128dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="@dimen/buttonDimens"
        android:layout_height="@dimen/buttonDimens"
        android:contentDescription="@string/skillsbtn"
        android:gravity="center"
        android:onClick="onClick"
        android:rotation="-45"
        android:tag="@string/skillstag"
        android:text="@string/skillstag"
        android:textAlignment="center"
        android:textColor="@color/material_dynamic_primary30"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Skrim_Splash"
        tools:text="@string/skillstag" />

</androidx.constraintlayout.widget.ConstraintLayout>